2010-03-11  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

PR tree-optimization/43280
	* tree-ssa-math-opts.c (find_bswap_1): Modify symbolic number generation.
	Move calculation of size out of the if branch.
	(find_bswap): Modify compare number generation.

2010-03-11  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* gcc.dg/optimize-bswapdi-1.c: Add OpenSSL bswap variant.
	* gcc.dg/pr43280.c: New testcase.




git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@157386 138bc75d-0d04-0410-961f-82ee72b054a4